Change log for zeit.web
=======================

2.56 (unreleased)
-----------------

- ZON-2507: Implement zeit campus groundwork (behind a feature toggle)

- ZON-2806: Add product.title as author fallback to AMPages

- ZON-2581: Track ad start events to webtrekk

- ZON-2805: Load distinct brightcove player in AMPages

- ZON-2807: Validate AMP microdata

- FIX: Don't try to re-raise interrupts, just let them slip by

- FIX: Write adcontroller level4 if applicable

- MAINT: Make solr timeout configurable

- MAINT: Make CP modules to preserve on pagination configurable

- MAINT: Migrate column teaser to new image delivery stack

- MAINT: Update schema.org microdata


2.55 (2016-02-09)
-----------------

- MAINT: Refactor printkiosk

- MAINT: Add enhanced window.Zeit javascript module to ZMO

- HOTFIX: Correctly parse jinja profiler toggle value

- ZON-2783: Add open graph sharing image width and height metadata

- ZON-2601: Add sharing links and article tags to AMPages

- ZON-2602: Add Nextread and Verlags-Nextread to AMPages

- ZON-2710: Use external SVG sprite in ZMO

- ZON-2732: Move celeraone device detection header setting to varnish

- ZON-2536: Move generic image assets to core module

- ZON-2692: Add instantarticle author fallback and local image captions

- ZON-2692: Remove instantarticle with missing block implementations from feed

- ZON-2613: Implement author teaser

- FIX: Unobtrusive loading of CeleraOne tracking script

- SUGAR: Implement assignment-conditional require blocks in jinja

- HOTFIX: No comment form, if community login is invalid


2.54.1 (2016-02-02)
-------------------

- FIX: Remove tautologous GTM include in ZMO template

- FIX: Handle images without copyrights in instantarticle template

- FIX: Use correct URL to retrieve an author's comments


2.54 (2016-02-01)
-----------------

- FIX: Fix scope of schema.org SiteNavigationElement

- ZON-2701: Framebuilder: inline required SVG icons

- MAINT: Add byline to nextread teaser
