@@ -14,6 +14,8 @@ Change log for zeit.web
 
 - ZON-2807: Validate AMP microdata
 
+- ZON-2636: Framebuilder: Add query parameters `hide_ressorts` and `hide_search`
+
 - FIX: Don't try to re-raise interrupts, just let them slip by
 
 - FIX: Write adcontroller level4 if applicable
